# SOCIP_Scenario_DB

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  phase-A-postgresql-etl-plan.md  pyproject.toml  scenario-db-yaml-design-v2.2.md
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
alembic/versions/: 0002_schema_extensions.py  0003_params_hash.py
dashboard/components/: cytoscape_viewer.py  elk_graph_builder.py  elk_viewer.py  node_detail_panel.py
dashboard/pages/: 1_Pipeline_Viewer.py
demo/notebooks/: 00_setup.ipynb  02_ip_usage_analysis.ipynb  03_sw_regression_story.ipynb
docs/progress/: phase_a_completion_report.md
hw_config/: dvfs-projectA.yaml
src/scenario_db/: config.py
tests/integration/: test_api_capability.py  test_api_runtime.py  test_matched_issues.py  test_phase2_gate.py  test_phase2_resolver.py  test_scenario_graph.py  test_schema_extensions.py  test_simulation_api.py  test_validate_loaded.py  test_view_projection.py  test_view_topology.py
tests/sim/: __init__.py  conftest.py  test_bw_calc.py  test_constants.py  test_dvfs_resolver.py  test_models.py  test_perf_calc.py  test_power_calc.py  test_runner.py  test_scenario_adapter.py
tests/unit/: conftest.py  test_decision_models.py  test_elk_graph_builder.py  test_loaders.py  test_node_detail_panel.py  test_pipeline_sw_stack.py  test_scenario_graph_models.py  (+4 more)
(+130 files in other folders)
