[project]
name = "02-scenariodb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "YounghwanJoo", email = "neokein@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.13.2",
    "pyyaml>=6.0.3",
    "sqlalchemy>=2.0.49",
]

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "scenario_db"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
